package com.thomsontang.command.hfdp;

/**
 * the light.
 *
 * @author Thomson Tang
 */
public interface Light {

    /**
     * turn on the light.
     */
    void on();

    /**
     * turn off the light.
     */
    void off();
}
